public/style/inventory.css
html,
body {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
	color: black;
	background-image: url('../img/core/background.jpg');
  font-family: 'Oswald', sans-serif;
}
div.inventorycontainer {
	width: 80%;
	margin-left: auto;
	margin-right: auto;
  background-color: #C19972;
  opacity: .85;
  border-radius: 5px 5px 5px 5px;
}

#inventorytitle{
  padding: 10px;
  color: black;
  font-family: 'Open Sans', sans-serif;
}

.grid {
  display: flex;
  flex-wrap: wrap;
  margin: auto;
  align-items: center;
  justify-content: center;
}

.additemcontainer {
	background-color: #C19972;
	padding: 16px;
	border: 3px solid gray;
	position: center;
	margin-left: auto;
	margin-right: auto;
  top: 50%;
  width: 50%;
}

input[type=text],  input[type=number]{
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    box-sizing: border-box;
    font-size: 16px;
    font-style: normal;
}

input:placeholder-shown {
	font-style: italic;
}

.addbutton {
  border-radius: 0.25em;
  background: linear-gradient(to bottom, #d3d3d3 0%, #808080 100%); width: 100%;
  margin: auto;
  color: white;
  padding: 14px 20px;
  text-align: center;
  display: inline-block;
  border: none;
  margin-right: 4px 2px;
  cursor: pointer;
  font-size: 16px;
  width: 49%;
}

.removebutton {
  border-radius: 0.25em;
  background: linear-gradient(to bottom, #d3d3d3 0%, #808080 100%); width: 100%;
  margin: auto;
  color: white;
  padding: 14px 20px;
  text-align: center;
  display: inline-block;
  border: none;
  margin-right: 4px 2px;
  cursor: pointer;
  font-size: 16px;
  width: 49%;
}

.itemcard {
  width: 200px;
  height: 250px;
  margin: 10px;
  border-radius: 15px;
  background: white;
  position: relative;
  display: flex;
  align-items: flex-end;
  transition: 0.4s ease-out;
  box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.5);
}

.itemcardtitle {
    word-wrap: break-word;
    width: 100%;
    background-color: #C19972;
    color: black;
    position: absolute;
    top: 30%;
    left: 0%;
    text-align: center;
    font-size: large;
}

#addcardtitle {
  width: 30px;
  height: 30px;
  color: white;
  position: absolute;
  top: 30%;
  left: 40%;
  text-align: center;
}

.addcarddetail {
  height: 100%;
  padding-top: 70px;
  font-size: x-large;
  font-style: bold;
  text-align: center;
}

.itemcardinfo {
  width: 100%;
  height: 100%;
}

.itemcardbuttons {
  /*background-color: red;*/
  width: 100%;
  height: 30%;
  text-align: center;
  padding: .5rem;
}

.itemcarddetails {
  padding-top: 3rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
}

.itemcard:hover {
  -webkit-transform: translateY(20px);
          transform: translateY(20px);
}
.itemcard:hover:before {
  opacity: 1;
}
.itemcard:hover .itemcardinfo {
  opacity: 1;
  -webkit-transform: translateY(0px);
          transform: translateY(0px);
}
.itemcard:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 15px;
  background: rgba(0, 0, 0, 0.6);
  z-index: 3;
  transition: 0.5s;
  opacity: 0;
}
.itemcard img {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
  position: absolute;
  top: 0;
  left: 0;
  border-radius: 15px;
}
.itemcard .itemcardinfo {
  position: relative;
  z-index: 3;
  color: white;
  opacity: 0;
  -webkit-transform: translateY(30px);
          transform: translateY(30px);
  transition: 0.5s;
}
.itemcard .itemcardinfo h1 {
  margin: 0px;
}
.itemcard .itemcardinfo p {
  letter-spacing: 1px;
  font-size: large;
  margin-top: 8px;
}
.itemcard .itemcardinfo button {
  width: 60px;
  height: 30px;
  text-align: center;
  padding: 6px 0;
  font-size: 12px;
  font-weight: bold;
  outline: none;
  border: none;
  border-radius: 15px;
  cursor: pointer;
  transition: 0.4s ease;
  float: right;
}

.itemcarddelete{
  color: white;
  background: linear-gradient(to bottom, #ff0000 0%, #800000 100%);
}


.itembtn {
	background-image: url('../img/inventory/necklace.png');
	background-size: 100% 100%;
    border: #ccc;
    color: transparent;
    width: 200px;
    height: 200px;
    padding: 12px 16px;
    text-align: bottom;
    font-size: 16px;
    margin: 4px 2px;
    cursor: pointer;
}

.modal {
	border: none;
  animation-name: animatetop;
    animation-duration: 0.4s
}

.modal-header {
	padding: 2px 16px;
	background-color: gray;
	color: white;
}

.modal-body {
  background-color: #C19972;  
}

.modal-footer {
	padding: 2px 16px;
	background-color: gray;
	color: white;
	float: bottom;
}


/* Add Animation */
@keyframes animatetop {
    from {top: -300px; opacity: 0}
    to {top: 0; opacity: 1}
}

.emptyInventory {
		width: 100%;
		margin-bottom: 50px;
}
/*Special style settings for smaller screens*/
@media only screen and (max-width: 768px) {
	div.inventorycontainer {
		padding-top: 25px;
	}

}

